Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8309036

[lworld] Assert during C2 compilation "possible deadlock"

XMLWordPrintable

      Merge of jdk-21+17 introduced crash...

      # Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S172158/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/1e55742e-5b78-4c56-81d7-974d0319e733/runs/8d8aef3a-1b34-4e63-bdf1-bd99610a4a86/workspace/open/src/hotspot/share/runtime/mutex.cpp:447), pid=1347813, tid=1347828
      # assert(false) failed: Attempting to acquire lock SystemDictionary_lock/safepoint-3 out of order with lock tty_lock/tty -- possible deadlock

      Stack: [0x00007fc75f638000,0x00007fc75f739000], sp=0x00007fc75f7353c0, free space=1012k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x142f24c] Mutex::check_rank(Thread*)+0x36c (mutex.cpp:447)
      V [libjvm.so+0x142f5f2] Mutex::lock(Thread*)+0x42 (mutex.cpp:120)
      V [libjvm.so+0x178cb76] SystemDictionary::find_constrained_instance_or_array_klass(Thread*, Symbol*, Handle)+0x66 (mutexLocker.hpp:214)
      V [libjvm.so+0x8c3645] ciEnv::get_klass_by_name_impl(ciKlass*, constantPoolHandle const&, ciSymbol*, bool)+0x2e5 (ciEnv.cpp:521)
      V [libjvm.so+0x8c34c8] ciEnv::get_klass_by_name_impl(ciKlass*, constantPoolHandle const&, ciSymbol*, bool)+0x168 (ciEnv.cpp:501)
      V [libjvm.so+0x8cf5bd] ciField::compute_type_impl()+0x6d (ciField.cpp:381)
      V [libjvm.so+0x8cf887] ciField::compute_type()+0xf7 (ciField.cpp:375)
      V [libjvm.so+0x1815721] TypeOopPtr::TypeOopPtr(Type::TYPES, TypePtr::PTR, ciKlass*, TypePtr::InterfaceSet const&, bool, ciObject*, Type::Offset, Type::Offset, int, TypePtr const*, int)+0x6f1 (ciField.hpp:106)
      V [libjvm.so+0x1815adc] TypeInstPtr::TypeInstPtr(TypePtr::PTR, ciKlass*, TypePtr::InterfaceSet const&, bool, ciObject*, Type::Offset, bool, int, TypePtr const*, int)+0x4c (type.cpp:4165)
      V [libjvm.so+0x1815ff9] TypeInstPtr::make(TypePtr::PTR, ciKlass*, TypePtr::InterfaceSet const&, bool, ciObject*, Type::Offset, bool, int, TypePtr const*, int)+0x119 (type.cpp:4208)
      V [libjvm.so+0x18167db] TypeInstPtr::add_offset(long) const+0x11b (type.cpp:4743)
      V [libjvm.so+0x1465836] PrintBFS::maybe_traverse(Node const*, Node const*)+0x26 (node.cpp:1830)
      V [libjvm.so+0x1465ebf] PrintBFS::collect()+0x18f (node.cpp:1951)
      V [libjvm.so+0x1466298] Node::dump_bfs(int, Node*, char const*) const+0x288 (node.cpp:1921)
      V [libjvm.so+0x9e2fe9] Compile::print_ideal_ir(char const*)+0xc9 (compile.cpp:580)
      V [libjvm.so+0xa03747] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1ec7 (compile.cpp:859)
      V [libjvm.so+0x84028b] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x3eb (c2compiler.cpp:118)
      V [libjvm.so+0xa0f490] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xaf0 (compileBroker.cpp:2265)
      V [libjvm.so+0xa10358] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1944)
      V [libjvm.so+0xed35be] JavaThread::thread_main_inner()+0x17e (javaThread.cpp:718)
      V [libjvm.so+0x17f0358] Thread::call_run()+0xb8 (thread.cpp:215)

            thartmann Tobias Hartmann
            dsimms David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: