8309036: [lworld] Assert during C2 compilation "possible deadlock"